# many_lights

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.cmake
VPL_gen/: CMakeLists.txt
VPL_gen/VPL_gen/: CMakeLists.txt  main.cpp
assets/conference/: conference.mtl
assets/shaders/: blinn_phong.frag  camera_icon.frag  camera_icon.vert  forward_blinn_phong.frag  forward_blinn_phong.vert  geometry_pass.frag  geometry_pass.vert  light_pass.frag  vpl_debug_no_lights.frag
assets/shaders/debug_spheres/: debug_spheres.frag  debug_spheres.vert
assets/shaders/stochastic_lightcuts/: bitonic_sort.glsl  build_internal_nodes.glsl  generate_cuts.glsl  light_pass.frag  morton_code.glsl
assets/sibenik/: sibenik_medium.mtl
many_lights/: CMakeLists.txt  many_lights.cpp  many_lights.h
many_lights/benchmarker/: CMakeLists.txt  benchmarker.cpp
many_lights/benchmarker/include/many_lights/: benchmarker.h
many_lights/camera/: CMakeLists.txt  camera.cpp
many_lights/camera/include/many_lights/: camera.h
many_lights/colors/: CMakeLists.txt  colors.cpp
many_lights/colors/include/many_lights/: colors.h
many_lights/exceptions/: CMakeLists.txt  exceptions.cpp
many_lights/exceptions/include/many_lights/: exceptions.h
many_lights/many_lights/: CMakeLists.txt  many_lights.cpp  window.cpp
many_lights/many_lights/include/many_lights/: glad.h  lights_algorithm.h  many_lights.h  window.h
many_lights/rendering/: CMakeLists.txt  mesh.cpp  model.cpp  renderer.cpp  shader.cpp
many_lights/rendering/include/many_lights/: buffer.h  many_lights_algorithm.h  mesh.h  model.h  renderer.h  shader.h
many_lights/scene/: CMakeLists.txt
many_lights/scene/include/many_lights/: scene.h  scene_entities.h  scene_lights.h
many_lights/ui/: CMakeLists.txt
many_lights/ui/include/many_lights/: ui.h
test_application/: CMakeLists.txt
test_application/rendering_algorithms/: CMakeLists.txt  deferred_renderer.cpp  forward_renderer.cpp
test_application/rendering_algorithms/deferred_renderer/: CMakeLists.txt  deferred_renderer.cpp
test_application/rendering_algorithms/deferred_renderer/include/test_application/: deferred_renderer.h
test_application/rendering_algorithms/forward_renderer/: CMakeLists.txt  forward_renderer.cpp
test_application/rendering_algorithms/forward_renderer/include/test_application/: forward_renderer.h
test_application/rendering_algorithms/include/test_application/: deferred_renderer.h  forward_renderer.h
test_application/rendering_algorithms/stochastic_lightcuts/: CMakeLists.txt
test_application/rendering_algorithms/stochastic_lightcuts/LightCut/: CMakeLists.txt
test_application/rendering_algorithms/stochastic_lightcuts/LightCut/include/LightCut/: LightCut.h
test_application/rendering_algorithms/stochastic_lightcuts/PBT/: CMakeLists.txt
test_application/rendering_algorithms/stochastic_lightcuts/PBT/include/pbt/: PBT.h  morton_code.h
test_application/rendering_algorithms/stochastic_lightcuts/include/test_application/: stochastic_lightcuts_renderer.h
test_application/rendering_algorithms/vpl_renderer/: CMakeLists.txt
test_application/rendering_algorithms/vpl_renderer/include/test_application/: vpl_renderer.h
test_application/test_application/: CMakeLists.txt  main.cpp
