# CMakeList.txt : CMake project for many_lights, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (many_lights "many_lights.cpp" "many_lights.h")

# TODO: Add tests and install targets if needed.
